--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,25 @@
+# Core dependencies
 psycopg2-binary==2.9.9
 requests==2.31.0
 beautifulsoup4==4.12.2
 selenium==4.15.2
 pandas==2.1.3
 numpy==1.26.2
+
+# Machine Learning
 scikit-learn==1.3.2
-tensorflow==2.15.0
-Django==4.2.7
-django-cors-headers==4.3.1
-celery==5.3.4
-redis==5.0.1
-python-dotenv==1.0.0
-Pillow==10.1.0
-schedule==1.2.0
 joblib==1.3.2
+
+# Flask API
+Flask==3.0.0
+Flask-CORS==4.0.0
+Werkzeug==3.0.1
+
+# Scheduling
+schedule==1.2.0
+python-dotenv==1.0.0
+
+# Web scraping utilities  
+Pillow==10.1.0
+redis==5.0.1
+celery==5.3.4
